# socket-voice-chat

./: Dockerfile  Makefile  README.md  requirements.txt  setup.cfg
socket_app/: client.py  server.py
socket_app/protocol/: protocol.py
